<resources>
    <string name="app_name">AppOrderFoods</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="nhapmatkhau">Mật khẩu</string>ư
    <string name="ngaysinh">Ngày sinh</string>
    <string name="chungminhnhandan">Chứng minh nhân dân</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">Đăng ký</string>
    <string name="loinhaptendangnhap">Vui lòng nhập tên đăng nhập</string>
    <string name="loinhapmatkhau">Vui lòng nhập mật khẩu</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="themthatbai">Thêm thất bại</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="tenbanan">Tên bàn ăn</string>

</resources>