<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:background="@color/colorPrimary"
    tools:context=".DangKyActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:layout_above="@id/lnKhungDangKy"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size10dp"
        android:layout_margin="@dimen/size10dp"
        android:textStyle="bold"
        android:textSize="@dimen/size30sp">

    </TextView>

    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    <EditText
        android:id="@+id/edTenDangNhapDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/tendangnhap"
        android:textColorHint="@color/colorGray"
        android:padding="@dimen/size10dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="@dimen/size10dp"
        android:textColor="@color/colorGray"
        android:singleLine="true">
    </EditText>

    <EditText
        android:id="@+id/edMatKhauDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/nhapmatkhau"
        android:textColorHint="@color/colorGray"
        android:padding="@dimen/size10dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/size10dp"
        android:password="true"
        tools:ignore="Deprecated"
        android:textColor="@color/colorGray"
        android:singleLine="true">
    </EditText>



    <RadioGroup
        android:id="@+id/rgGioiTinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nam">
<!--            android:checked="true"-->

        </RadioButton>

        <RadioButton
            android:id="@+id/rdNu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nữ">
        </RadioButton>
    </RadioGroup>

        <EditText
            android:id="@+id/edNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/ngaysinh"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray">
        </EditText>

        <EditText
            android:id="@+id/edCMNDDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size10dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginEnd="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/chungminhnhandan"
            android:numeric="integer"
            android:padding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            tools:ignore="Deprecated"
            android:maxLength="8"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDongYDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongy"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/colorGreenButton">

            </Button>

            <Button
                android:id="@+id/btnThoatDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/colorOrangButton">

            </Button>
        </LinearLayout>





    </LinearLayout>

</RelativeLayout>